--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-
+.presentation{
+padding: 0 85px 0 85px;
+}
 
 /* ==========================================================================
    Author's custom styles
