--- a/css/main.css
+++ b/css/main.css
@@ -33,15 +33,95 @@ padding: 0 85px 0 85px;
 
 }
 
-.nav-tabs {
-    text-align:center;
+.nav-tabs > li{
+margin-right:45px;
 }
 
-.myvlogo{display:block;background-image:url(../img/logo.png);background-repeat:no-repeat;background-position: 0px 0px;width:211px;height:34px;margin-bottom:50px;margin-top:25px;/* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;}
+.nav-tabs > li.last{
+margin-right:0px;
+}
 
-.piclink{background-repeat:no-repeat;background-position: 0px 0px;width:69px;height:69px;/* margin-bottom:50px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;}
+.nav-tabs {
+    text-align:center;
+	border-bottom: 0px solid #ddd;
+}
 
-.partidospic{background-image:url(../img/button.png);}
+.nav-tabs>li>a, .nav-pills>li>a {
+padding-right: 0px;
+padding-left: 0px;
+margin-right: 0px;
+line-height: 0px;
+}
+
+.nav-tabs>.active>a, .nav-tabs>.active>a:hover, .nav-tabs>.active>a:focus {
+color: #555;
+cursor: default;
+background-color: #fff;
+border:0;
+border-bottom: 5px solid #ddd;
+border-bottom-color: #000;
+}
+
+.nav-tabs>li>a, .nav-tabs>li>a {
+border:0;
+/* border-color: #eee #eee #ddd; */
+}
+
+.nav-tabs>li>a:hover, .nav-tabs>li>a:focus {
+border:0;
+/* border-color: #eee #eee #ddd; */
+}
+
+.myvlogo{display:block;background-image:url(../img/logo.png);background-repeat:no-repeat;background-position: 0px 0px;width:211px;height:34px;margin-bottom:30px;margin-top:25px;/* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;}
+
+.piclink{background-repeat:no-repeat;background-position: 0px 0px;width:114px;height:86px;/* margin-bottom:50px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;}
+
+.partidospic{background-image:url(../img/menu/partidos.png);}
+.promesaspic{background-image:url(../img/menu/promesas.png);}
+.programaspic{background-image:url(../img/menu/programas.png);}
+.graficaspic{background-image:url(../img/menu/graficas.png);}
+.aboutpic{background-image:url(../img/menu/about.png);}
+
+a.carousel-control{
+position: absolute;
+top: 40%;
+left: 15px;
+width: 40px;
+height: 40px;
+margin-top: -20px;
+font-size: 75px;
+font-weight: 100;
+line-height: 30px;
+color: #000;
+text-align: center;
+background: none;
+border: 0px solid #000;
+-webkit-border-radius: 0px;
+-moz-border-radius: 0px;
+border-radius: 0px;
+opacity: 1;
+filter: alpha(opacity=100);
+}
+
+a.carousel-control.right{
+display:block;background-image:url(../img/derecha.png);background-repeat:no-repeat;background-position: 0px 0px;width:24px;height:36px;/* margin-bottom:30px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;
+}
+
+a.carousel-control.left{
+display:block;background-image:url(../img/izquierda.png);background-repeat:no-repeat;background-position: 0px 0px;width:24px;height:36px;/* margin-bottom:30px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;
+}
+
+/* //Temporal alignment */
+a.carousel-control{
+margin-top:20px;
+}
+
+a.carousel-control:hover, .carousel-control:focus{
+color: #000;
+text-decoration: none;
+opacity: 1;
+filter: alpha(opacity=100);
+}
 
 /* ==========================================================================
    Author's custom styles
