--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+body{background-image:url(../img/patron.png);background-repeat:repeat;background-position: 0px 0px;}
+
 .presentation{
 padding: 0 85px 0 85px;
 }
@@ -56,7 +58,7 @@ line-height: 0px;
 .nav-tabs>.active>a, .nav-tabs>.active>a:hover, .nav-tabs>.active>a:focus {
 color: #555;
 cursor: default;
-background-color: #fff;
+background-color: transparent;
 border:0;
 border-bottom: 5px solid #ddd;
 border-bottom-color: #000;
