--- a/css/main.css
+++ b/css/main.css
@@ -106,11 +106,11 @@ filter: alpha(opacity=100);
 }
 
 a.carousel-control.right{
-display:block;background-image:url(../img/derecha.png);background-repeat:no-repeat;background-position: 0px 0px;width:24px;height:36px;/* margin-bottom:30px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;
+display:block;background-image:url(../img/derecha.png);background-repeat:no-repeat;background-position:0;width:24px;height:36px;/* margin-bottom:30px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;
 }
 
 a.carousel-control.left{
-display:block;background-image:url(../img/izquierda.png);background-repeat:no-repeat;background-position: 0px 0px;width:24px;height:36px;/* margin-bottom:30px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;
+display:block;background-image:url(../img/izquierda.png);background-repeat:no-repeat;background-position:0;width:24px;height:36px;/* margin-bottom:30px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */text-indent:-9999px;
 }
 
 /* //Temporal alignment */
