Setup "/about" user interface
Añadido soporte para fuentes externas "woff"

--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,10 @@ opacity: 1;
 filter: alpha(opacity=100);
 }
 
+#about{
+font-family: 'Merriweather Sans', sans-serif;
+}
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
