--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,104 @@ border:0;
 .graficaspic{background-image:url(../img/menu/graficas.png);}
 .aboutpic{background-image:url(../img/menu/about.png);}
 
+.nav-tabs>li>a.piclinktop {
+padding-top: 2px;
+padding-bottom: 2px;
+}
+
+li.toplinks {
+margin-right: 36px;
+}
+
+.searchfilter{
+margin-right: 3px;
+border: solid 3px;
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+background-color: white;
+font-weight: bold;
+padding: 5px;
+padding-bottom: 2px;
+font-size:13px;
+}
+
+.searchfilter button.btn, input[type="submit"].btn{
+margin-top: -3px;
+}
+
+.searchfilter input[type="text"]{
+border-bottom: solid 1px black;
+border-left: solid 1px black;
+}
+
+.searchfilter input.search-query {
+padding-right: 14px;
+padding-right: 4px 9;
+padding-left: 5px;
+padding-left: 4px 9;
+padding-top: 2px;
+padding-bottom: 2px;
+margin-top: -2px;
+margin-bottom: 1px;
+-webkit-border-radius: 10px;
+-moz-border-radius: 10px;
+border-radius: 10px;
+}
+
+li.topfilter {
+margin-right: 3px;
+border: solid 3px;
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+background-color: white;
+}
+
+li.topfilter:hover {
+}
+
+.nav-tabs>li.topfilter>a:hover, .nav-tabs>li.topfilter>a:focus {
+border:0;
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+}
+.nav-tabs>li.topfilter>a:hover, .nav-tabs>li.topfilter>a:focus {
+border-color: #eee #eee #ddd;
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+}
+.nav>li.topfilter>a:hover, .nav>li.topfilter>a:focus {
+text-decoration: none;
+background-color: #eee;
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+}
+
+li.topfilter a {
+padding: 14px 8px 14px 8px;
+color: black;
+font-weight:bold;
+font-size:13px;
+}
+
+
+.piclinktop{background-repeat:no-repeat;background-position: 0px 0px;width:74px;height:45px;/* margin-bottom:50px;margin-top:25px; *//* margin-top:-4px;margin-right:-2px; */margin:0; text-indent:-9999px;}
+
+.sanidadpic{background-image:url(../img/menu/top/sanidad.png);}
+.educacionpic{background-image:url(../img/menu/top/educacion.png);}
+.exteriorpic{background-image:url(../img/menu/top/exterior.png);}
+.empleopic{background-image:url(../img/menu/top/empleo.png);}
+.sociedadpic{background-image:url(../img/menu/top/sociedad.png);}
+.economiapic{background-image:url(../img/menu/top/economia.png);}
+
+.secondrow{
+margin-top:-25px;
+}
+
 a.carousel-control{
 position: absolute;
 top: 40%;
@@ -127,6 +225,10 @@ filter: alpha(opacity=100);
 
 #about{
 font-family: 'Merriweather Sans', sans-serif;
+}
+
+.aparty{
+width:120px;
 }
 
 /* ==========================================================================
